--- a/main.html
+++ b/main.html
@@ -53,6 +53,11 @@
 		<sup data-ns-test="block-inline-sup">Test2</sup>
 		<div>Answer: Inline</div>
 	</div>
+	<div>
+		<sub data-ns-test="block-inline-sub">Test1</sub>
+		<sub data-ns-test="block-inline-sub">Test2</sub>
+		<div>Answer: Inline</div>
+	</div>
 
 	
     <script type="text/javascript" src="./script.js">
